# C.A.S.P.E.R.-2

./: .gitignore  BRANCHING.md  DEV_UPDATE.md  EKF_SPEC.md  FLIGHT_READINESS.md  INTERFACE_SPEC.md  README.md  SENSOR_SPEC.md  casper_ekf16_symbolic.mat
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: dev_to_dev.md  dev_to_flight_testing.md  flight_testing_to_main.md  hotfix_to_main.md
Hardware/: Casper2.txt
Matlab Code/: BARO_HI.CSV  BARO_LO.CSV  BARO_MD.CSV  MAG_CAL.CSV  MAG_Cal_STAT.CSV  MAG_VAL.CSV  SimulinkDataFile.csv  baro_noise_params.mat  test.m
Matlab Code/EKF Dev/: EKF16Verify.m  EKF_Symbolic_Dev.m
Matlab Code/sensorcal/: casper_sensor_characterization.m  noise_params.mat
Product Requirement Docs/: CASPER2_RADIO_PRD.md  CASPER2_TEST_HARNESS_PRD.md  CASPER_FLIGHT_CRITICAL_PRD.md  CASPER_FSM_PRD.md  CASPER_LOGGING_PRD.md
Software/: .mxproject  Casper2.ioc  Makefile  STM32H750XX_FLASH.ld
Software/App/buzzer/: buzzer.c  buzzer.h
Software/App/cal/: mag_cal.c  mag_cal.h  mag_val.c  mag_val.h  temp_cal.c  temp_cal.h
Software/App/command/: cac_handler.c  cac_handler.h  cfg_manager.c  cfg_manager.h  cmd_router.c  cmd_router.h  hil_adxl_handler.c  hil_adxl_handler.h  hil_aux_handler.c  hil_aux_handler.h  hil_handler.c  hil_handler.h  hil_raw_handler.c  hil_raw_handler.h
Software/App/diag/: cycle_probe.c  cycle_probe.h  logger_sanity.c  logger_sanity.h  self_test.c  self_test.h
Software/App/drivers/: adxl372.c  adxl372.h  lsm6dso32.c  lsm6dso32.h  max_m10m.c  max_m10m.h  mmc5983ma.c  mmc5983ma.h  ms5611.c  ms5611.h  w25q512jv.c  w25q512jv.h
Software/App/flight/: app_globals.h  flight_config.c  flight_config.h  flight_constants.h  flight_context.h  flight_log.c  flight_log.h  flight_log_helpers.c  flight_log_helpers.h  flight_loop.c  flight_loop.h  flight_readout.c  flight_readout.h  pyro_logic.c  pyro_logic.h
Software/App/fsm/: flight_fsm.c  flight_fsm.h  fsm_types.h  fsm_util.c  fsm_util.h
Software/App/ground/: ground_main.c  ground_main.h  ground_radio.c  ground_radio.h
Software/App/hse_test/: hse_test.c  hse_test.h
Software/App/logging/: flight_logger.c  flight_logger.h  hamming.c  hamming.h  log_index.c  log_index.h  log_stream.c  log_stream.h  log_types.h
Software/App/nav/: casper_attitude.c  casper_attitude.h  casper_ekf.c  casper_ekf.h  casper_gyro_int.c  casper_gyro_int.h  casper_quat.c  casper_quat.h  temp_cal_coeffs.h
Software/App/pack/: quat_pack.c  quat_pack.h  status_pack.c  status_pack.h
Software/App/pyro/: casper_pyro.c  casper_pyro.h  pyro_manager.c  pyro_manager.h
Software/App/radio/: radio_config.c  radio_config.h  radio_irq.c  radio_irq.h  radio_manager.c  radio_manager.h  sx1276.c  sx1276.h
Software/App/telemetry/: cobs.c  cobs.h  crc32_hw.c  crc32_hw.h  tlm_manager.c  tlm_manager.h  tlm_types.h
Software/App/test/: test_flight_config.c  test_flight_fsm.c  test_flight_log.c  test_pyro_logic.c  test_shim.h
Software/App/util/: endian.h
Software/Core/Inc/: adxl372.h  casper_attitude.h  casper_ekf.h  casper_gyro_int.h  casper_quat.h  lsm6dso32.h  main.h  max_m10m.h  mmc5983ma.h  ms5611.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Software/Core/Src/: adxl372.c  casper_attitude.c  casper_ekf.c  casper_gyro_int.c  casper_quat.c  lsm6dso32.c  mag_cal.c  main.c  max_m10m.c  mmc5983ma.c  ms5611.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  w25q512jv.c
Software/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_iwdg.h
Software/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_iwdg.c
Software/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_msc_storage_if.c  usbd_msc_storage_if.h
Software/tools/: decode_flight_log.py
Specification Docs/: EKF_SPEC.md  FSM_TRANSITION_SPEC.md  HARDWARE_SPEC.md  INTERFACE_SPEC.md  ORIENTATION_SPEC.md  PYRO_SPEC.md
Tests/: CMakeLists.txt  Makefile  build.sh  test_config.h
Tests/compliance/: test_ekf_spec.c  test_interface_spec.c  test_naming_convention.c  test_pyro_spec.c  test_sensor_spec.c
Tests/mocks/: mock_adc.c  mock_adc.h  mock_gpio.c  mock_gpio.h  mock_tick.c  mock_tick.h
Tests/regression/: csv_loader.c  csv_loader.h  regression_helpers.c  regression_helpers.h  test_attitude_regression.c  test_ekf_regression.c
Tests/scripts/: coverage.sh  jsf_check.sh  run_tests.sh
Tests/stubs/: arm_math.h  arm_math_stub.c  arm_math_stub.h  endian.h  global_handles.c  main.h  stm32h7xx_hal.h  stm32h7xx_hal_conf.h  stub_helpers.c  usbd_cdc_if.h
Tests/tier1_unit/: test_casper_attitude.c  test_casper_ekf.c  test_casper_gyro_int.c  test_casper_quat.c  test_cobs.c  test_crc32.c  test_fsm_util.c  test_ms5611_math.c  test_status_pack.c  test_tlm_pack.c
Tests/tier2_protocol/: test_cac_handler.c  test_cmd_router.c  test_flight_fsm.c  test_fsm_transitions.c  test_hil_handler.c  test_pyro_manager.c  test_pyro_safety.c  test_telemetry_framing.c
Tests/tier3_integration/: test_flight_loop.c  test_nav_pipeline.c
Tests/unity/: unity.c  unity.h  unity_internals.h
tools/: __init__.py  casper_decode.py  hil_sender.py  send_sim.py
tools/hil/: README.md  __init__.py  framing.py  protocol.py  runner.py  sensor_models.py  trajectory.py
tools/hil/scenarios/: __init__.py  openrocket_hpr.py
